--- a/package.json
+++ b/package.json
@@ -28,24 +28,20 @@
     "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
     "watch": "babel src --out-dir lib --watch --source-maps",
     "prepublish": "npm run --if-present build",
-    "test": "mocha test/"
+    "test": "mocha --require @babel/register test/test.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-jsdoc-to-assert": "^1.0.1",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-register": "^6.8.0",
-    "mocha": "^2.4.5",
-    "power-assert": "^1.3.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "mocha": "^9.2.1",
     "temp-fs": "^0.9.9"
   },
   "dependencies": {
-    "ejs": "^2.4.1",
-    "log-symbols": "^1.0.2",
-    "meow": "^3.7.0",
+    "ejs": "^3.1.6",
+    "meow": "^8.1.2",
     "moment": "^2.13.0",
-    "object.assign": "^4.0.3",
-    "read-pkg-up": "^1.0.1"
+    "read-pkg-up": "^7.0.1"
   }
 }
