--- a/package.json
+++ b/package.json
@@ -16,32 +16,29 @@
     "lib/"
   ],
   "version": "1.1.2",
-  "description": "Generate README.md from pacakge.json",
-  "main": "lib/index.js",
+  "description": "Generate README.md from package.json",
+  "type": "module",
+  "main": "src/index.js",
+  "exports": {
+    ".": "./src/index.js",
+    "./package.json": "./package.json"
+  },
   "bin": {
-    "pkg-to-readme": "lib/cli.js"
+    "pkg-to-readme": "src/cli.js"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "NODE_ENV=production babel src --out-dir lib --source-maps",
-    "watch": "babel src --out-dir lib --watch --source-maps",
-    "prepublish": "npm run --if-present build",
-    "test": "mocha --require @babel/register test/test.js"
+    "test": "mocha test/test.mjs"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/register": "^7.0.0",
-    "mocha": "^9.2.1",
+    "mocha": "^10.2.0",
     "temp-fs": "^0.9.9"
   },
   "dependencies": {
-    "ejs": "^3.1.6",
-    "meow": "^8.1.2",
-    "moment": "^2.13.0",
-    "read-pkg-up": "^7.0.1"
+    "ejs": "^3.1.9",
+    "meow": "^12.0.1",
+    "read-pkg-up": "^10.0.0"
   }
 }
