--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "dependencies": {
     "ejs": "^3.1.9",
-    "meow": "^12.0.1",
-    "read-pkg-up": "^10.0.0"
+    "meow": "^13.1.0",
+    "read-package-up": "^11.0.0"
   }
 }
