--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pkg-to-readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/azu/pkg-to-readme.git"
+    "url": "git+https://github.com/azu/pkg-to-readme.git"
   },
   "author": "azu",
   "email": "azuciao@gmail.com",
