chore(dep): update ejs@3.1.10

--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "test": "mocha test/test.mjs"
   },
   "devDependencies": {
-    "mocha": "^10.2.0",
+    "mocha": "^10.7.3",
     "temp-fs": "^0.9.9"
   },
   "dependencies": {
-    "ejs": "^3.1.9",
-    "meow": "^13.1.0",
+    "ejs": "^3.1.10",
+    "meow": "^13.2.0",
     "read-package-up": "^11.0.0"
-  }
+  },
+  "packageManager": "npm@10.8.2+sha512.c7f0088c520a46596b85c6f8f1da943400199748a0f7ea8cb8df75469668dc26f6fb3ba26df87e2884a5ebe91557292d0f3db7d0929cdb4f14910c3032ac81fb"
 }
